# typed_configparser

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: main.yml  tests.yml
examples/: basic.py  defaults.py  list_and_tuples.py  unions_and_optionals.py
tests/: tests.py
typed_configparser/: __init__.py  exceptions.py  parser.py
